--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --primary: #e74c3c;
+}
+
 /* Reset default margin and padding */
 * {
   margin: 0;
@@ -8,119 +12,148 @@
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  margin: 0;
 }
 
 header {
   text-align: left;
-  padding: 15px 0;
+  padding-top: 15px;
 }
 
 header img {
-  max-width: 270px;
+  max-width: 250px;
   padding-left: 20px;
 }
 
+/* Heading section */
 .heading {
   text-align: center;
-  font-size: 2em;
+  font-size: 1.7em;
   padding: 30px 0;
   color: #333;
 }
 
-.red {
-  color: #db402f;
+.heading span:nth-child(2) {
+  color: var(--primary);
   font-weight: bold;
 }
 
-/* Search Bar Styles */
+/* Search field Section */
 .search-container {
   margin: 30px auto;
   max-width: 600px;
 }
 
-.search-input {
+#search-input {
   padding: 14px;
   margin-bottom: 20px;
   width: 100%;
-  border-radius: 20px;
-  border: 2px solid #e74c3c;
+  border-radius: 25px;
+  border: 2px solid var(--primary);
   background-color: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: border-color 0.4s, box-shadow 0.4s;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-.search-input:focus {
+#search-input:focus {
   border-color: #ff8f8f;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   outline: none;
 }
 
-/* Button Styles */
+/* Buttons Section*/
+.button-container {
+  text-align: center;
+}
+
 button {
   display: inline-block;
   padding: 12px 24px;
   font-size: 16px;
   border-radius: 25px;
-  background-color: #e74c3c;
+  background-color: var(--primary);
   color: #ffffff;
   cursor: pointer;
-  transition: background-color 0.4s, color 0.4s, border-color 0.4s,
-    box-shadow 0.4s;
+  transition: background-color 0.4s, color 0.4s, box-shadow 0.4s;
   border: 2px solid transparent;
-  outline: none;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
 }
 
 /* Hover effects */
 button:hover {
   background-color: #ffffff;
-  color: #e74c3c;
-  border: 2px solid #e74c3c;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
 }
 
-.button-container {
-  text-align: center;
-  margin-bottom: 30px;
+/* Disabled button */
+button[disabled] {
+  opacity: 0.6;
+  cursor: not-allowed;
+  background-color: #ccc;
+  color: #999;
 }
 
-/* Apply basic styles to the summary container */
+/* Meta data Section*/
 .meta-data-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  margin: 10px 20px;
 }
 
-/* Style for the summary text container */
-.summary-text {
-  border: 2px solid #e74c3c;
+/* video title and thumbnail*/
+#video-title {
+  margin: 20px 20px 5px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#video-thumbnail {
+  width: 480px;
+  height: 300px;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+#video-thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Summary section*/
+.summary {
+  border: 2px solid var(--primary);
   border-radius: 10px;
   padding: 15px;
   width: 90%;
   margin: auto;
   margin-bottom: 80px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Style for the summary text */
-.summary {
+/* Summary text */
+.summary-text {
   font-size: 20px;
   line-height: 1.6;
   text-align: justify;
 }
 
+/* Spinner section */
 .spinner {
   width: 40px;
   height: 40px;
   border: 4px solid rgba(0, 0, 0, 0.1);
-  border-left-color: #e74c3c;
+  border-left-color: var(--primary);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
 
-.summary-spinner {
+.spinner-container {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -132,25 +165,7 @@ button:hover {
   }
 }
 
-#video-title {
-  margin-top: 10px;
-  margin-bottom: 5px;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-#video-thumbnail {
-  width: 480px;
-  height: 300px;
-  overflow: hidden;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Styles for the error container */
+/* error section*/
 .error {
   display: flex;
   align-items: center;
@@ -160,30 +175,21 @@ button:hover {
   background-color: #f9d6d5;
 }
 
-/* Styles for the error text */
+/* error text */
 .error-text {
   color: #e74c3c;
   font-size: 16px;
   font-family: Arial, sans-serif;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-/* Style for a disabled button */
-button[disabled] {
-  opacity: 0.6;
-  cursor: not-allowed;
-  background-color: #ccc;
-  color: #999;
-}
-
+/* Footer section*/
 footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #ececec;
+  background-color: #d8d8d8;
   text-align: center;
   padding: 7px 0;
 }
@@ -192,95 +198,71 @@ footer a {
   display: inline-block;
   text-decoration: none;
   color: black;
-  transition: color 0.3s, transform 0.3s;
+  transition: color 0.2s, transform 0.2s;
 }
 
 footer a:hover {
-  color: #e74c3c;
+  color: var(--primary);
   transform: scale(1.1);
 }
 
-footer img,
-footer span {
+footer img {
   vertical-align: middle;
   height: 20px;
   margin-right: 5px;
-  transition: color 0.3s;
 }
 
 /* Responsive CSS within Media Query */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 630px) {
   header img {
-    max-width: 150px;
-    padding-left: 10px;
+    max-width: 160px;
+    padding-left: 7px;
   }
 
   .heading {
     font-size: 0.7em;
-    padding: 20px 0;
   }
 
   .search-container {
-    margin: 20px auto;
+    margin: 15px auto;
     max-width: 350px;
   }
 
   .search-input {
-    padding: 10px; /* Reduced padding for smaller screens */
+    padding: 10px;
     margin-bottom: 15px;
   }
 
-  button {
-    padding: 8px 16px; /* Reduced button padding for smaller screens */
-    font-size: 12px; /* Reduced font size for smaller screens */
-  }
-
   .button-container {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
 
-  .frame iframe {
-    height: 250px;
-  }
-
-  .summary {
-    font-size: 13px;
-  }
-
-  .summary-text h2 {
-    font-size: 15px;
-  }
-
-  footer {
-    width: 100%;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
-  }
-  #video-title {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  button {
+    padding: 8px 16px;
     font-size: 12px;
-    font-weight: bold;
+  }
+
+  #video-title {
+    font-size: 12px;
+    margin: 5px;
   }
 
   #video-thumbnail {
-    width: 320px;
-    height: 280px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 370px;
+    height: 225px;
+  }
+
+  .summary {
+    font-size: 12px;
+    margin: 20px 10px 80px 20;
+  }
+
+  .summary-text {
+    font-size: 13px;
   }
 
   footer {
-    font-size: 14px;
     padding: 5px 0;
-  }
-
-  footer img,
-  footer span {
-    height: 16px;
+    font-size: 14px;
   }
 }
