--- a/style.css
+++ b/style.css
@@ -212,6 +212,10 @@ footer img {
   margin-right: 5px;
 }
 
+footer span {
+  vertical-align: middle;
+}
+
 /* Responsive CSS within Media Query */
 @media only screen and (max-width: 630px) {
   header img {
